fixed dropdown overlap and made dropdown items larger on mobile

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,6 +1,7 @@
 .input {
   display: inline-block;
   z-index: 1;
+  position: relative;
 }
 
 .dropdown {
